--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.16",
     "pg": "^8.7.1"
   }
 }
